--- a/service-feign/pom.xml
+++ b/service-feign/pom.xml
@@ -10,10 +10,9 @@
     <description>Demo project for Spring Boot</description>
 
     <parent>
-        <groupId>com.electric.cet</groupId>
+        <groupId>com.jinhua</groupId>
         <artifactId>cloud-maven-main</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/>
     </parent>
 
     <properties>
@@ -30,6 +29,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
