--- a/service-zuul/pom.xml
+++ b/service-zuul/pom.xml
@@ -10,7 +10,7 @@
     <description>Demo project for Spring Boot</description>
 
     <parent>
-        <groupId>com.electric.cet</groupId>
+        <groupId>com.jinhua</groupId>
         <artifactId>cloud-maven-main</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
