--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.jinhua</groupId>
         <artifactId>cloud-maven-main</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>eureka-client</artifactId>
