--- a/service-feign/pom.xml
+++ b/service-feign/pom.xml
@@ -17,6 +17,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.jinhua</groupId>
+            <artifactId>feign-common</artifactId>
+            <version>${feign-common.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
