--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
         <spring-cloud.version>2020.0.6</spring-cloud.version>
         <spring-boot.version>2.5.14</spring-boot.version>
 
+        <spring-cloud-starter-netflix.version>2.2.10.RELEASE</spring-cloud-starter-netflix.version>
+
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+
         <feign-common.version>1.0.0</feign-common.version>
     </properties>
 
