--- a/service-ribbon/pom.xml
+++ b/service-ribbon/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-            <version>2.2.9.RELEASE</version>
+            <version>${spring-cloud-starter-netflix.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-            <version>2.2.9.RELEASE</version>
+            <version>${spring-cloud-starter-netflix.version}</version>
         </dependency>
     </dependencies>
 
