--- a/service-zuul/pom.xml
+++ b/service-zuul/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-            <version>2.2.9.RELEASE</version>
+            <version>${spring-cloud-starter-netflix.version}</version>
         </dependency>
     </dependencies>
 
