--- a/boot-admin/pom.xml
+++ b/boot-admin/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-server</artifactId>
-            <version>2.5.6</version>
+            <version>${spring-boot-admin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
