--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.14</version>
+        <version>2.4.13</version>
     </parent>
 
     <name>cloud-maven-main</name>
@@ -35,6 +35,7 @@
         <spring-boot.version>2.5.14</spring-boot.version>
 
         <spring-cloud-starter-netflix.version>2.2.10.RELEASE</spring-cloud-starter-netflix.version>
+        <spring-boot-admin.version>2.5.6</spring-boot-admin.version>
 
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
