--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.13</version>
+        <version>2.1.18.RELEASE</version>
     </parent>
 
     <name>cloud-maven-main</name>
@@ -31,8 +31,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-cloud.version>2020.0.6</spring-cloud.version>
-        <spring-boot.version>2.5.14</spring-boot.version>
+        <spring-cloud.version>Greenwich.SR6</spring-cloud.version>
+        <spring-boot.version>2.1.18.RELEASE</spring-boot.version>
 
         <spring-cloud-starter-netflix.version>2.2.10.RELEASE</spring-cloud-starter-netflix.version>
         <spring-boot-admin.version>2.5.6</spring-boot-admin.version>
