--- a/boot-admin/pom.xml
+++ b/boot-admin/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>boot-admin</artifactId>
+    <version>${project.parent.version}</version>
 
     <dependencies>
         <dependency>
