--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>eureka-client</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${project.parent.version}</version>
     <packaging>war</packaging>
 
     <name>eureka-client</name>
