--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eureka-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${project.parent.version}</version>
     <packaging>war</packaging>
     <name>eureka-server</name>
     <description>Demo project for Spring Boot</description>
