--- a/service-feign/pom.xml
+++ b/service-feign/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-feign</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${project.parent.version}</version>
     <packaging>war</packaging>
     <name>service-feign</name>
     <description>Demo project for Spring Boot</description>
