--- a/boot-admin/pom.xml
+++ b/boot-admin/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>boot-admin</artifactId>
     <version>${project.parent.version}</version>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
